Fixed prop error for row and column gap

--- a/scss/partials/_spacing.scss
+++ b/scss/partials/_spacing.scss
@@ -21,12 +21,12 @@ $variants: "a", "t", "r", "b", "l";
 
 @for $i from 1 through 5 {
     .row-gap#{$i}#{$post} {
-        gap: $i * $spacing;
+        row-gap: $i * $spacing;
     }
 }
 
 @for $i from 1 through 5 {
     .col-gap#{$i}#{$post} {
-        gap: $i * $spacing;
+        column-gap: $i * $spacing;
     }
 }
